Modify Navigation Bar look. Add correct spacing distribution between the header, projects, and footer in projects.html

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,18 +44,23 @@ html{
  */
 .navigation-bar{
   display: -webkit-flex;
+  display: flex;
   width: 100%;
   height: 10%;
-  padding-top: 1%;
-  padding-bottom: 1%;
   -webkit-flex-shrink: 0;
   flex-shrink: 0;
+  border-bottom: 1px white solid;
 }
 
 .navigation-bar .links{
   height: 100%;
   text-align: center;
-  padding: 15px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 a.no-underline-link,
@@ -73,24 +78,13 @@ a.no-underline-link:active
 a.no-underline-link:hover,
 a.no-underline-link:active,
 a.no-underline-link.active{
-  color: black;
+  color: white;
   border-bottom: 1px solid #52bab3;
-  padding-bottom: 5px;
 }
 
 a.no-underline-link:active{
   border-bottom: 1px solid #52bab3;
 }
-
-/*
-.page-views{
-  height: 90%;
-  width: 100%;
-}*/
-
-/*
- * Footer CSS
- */
 
 .footer{
   background-color: black;
@@ -100,7 +94,6 @@ a.no-underline-link:active{
   color: white;
   -webkit-flex-shrink: 0;
   flex-shrink: 0;
-
 }
 
 .footer .footer-text{
@@ -187,7 +180,12 @@ a.no-underline-link:active{
 /*******************************************************************************
  * project.html
  ******************************************************************************/
-.row.no-margin.project-row{
+
+.full-height.projects-container{
+  padding: 20px 0px;
+}
+
+.projects-container .row.no-margin.project-row{
   padding: 20px 0px;
 }
 
@@ -212,7 +210,6 @@ a.no-underline-link:active{
 .project-container:hover .project-image{
   opacity: 1;
 }
-
 
  /*******************************************************************************
   * login.html
